--- a/estilos.css
+++ b/estilos.css
@@ -1,12 +1,17 @@
 :root {
     --cambria: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-
+    --azul-claro: #2a8ac5;
+    --azul-escuro: #102c3d;
+    --branco: white;
 }
 
 header {
     padding: 2em;
     text-align: center;
-    background-color: #184c6d;
+}
+
+header, footer {
+    background-color: var(--azul-escuro);
 }
 
 header h1 {
@@ -17,27 +22,27 @@ header h1 {
 
 nav {
     padding: .5em;
-    background-color: #2880B6;
+    background-color: var(--azul-claro);
     margin-bottom: 1em;
+    top: 0;
+    position: sticky;
 }
 
 nav a.nav-link {
-    color: white;
+    color: var(--branco);
     border-radius: 10px;
     font-weight: 600;
 }
 
 nav a.nav-link:hover {
-    color: #2880B6;
-    background-color: white;
+    color: var(--azul-claro);
+    background-color: var(--branco);
 }
 
-main h2 {
-    font-family: var(--cambria);
-    font-size: 2.3em;
+main h3,
+aside h3 {
     color: black;
-    padding-bottom: .2em;
-    border-bottom: 1px solid #bbb;
+    font-size: 1.8em;
 }
 
 main article {
@@ -52,11 +57,47 @@ main article img {
     margin-right: 30px;
 }
 
-main article h3 {
-    color: #2880B6;
+main h2 {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 1.8em;
+    color: var(--azul-claro);
     text-align: justify;
 }
 
-main article p {
-    text-align: justify;
+main p{
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+main span {
+    font-style: italic;
+    font-size: .7em;
+}
+
+main a, aside a, footer a {
+    text-decoration: none;
+}
+
+main h3, 
+aside h3,
+aside h2,
+aside h4,
+aside h5 {
+    font-family: var(--cambria);
+}
+
+aside article h4 a:hover, 
+footer a:hover {
+    text-decoration: underline;
+}
+
+aside article h5 a {
+    color: #333333;
+}
+
+footer h6 {
+    font-size: 1.5em;
+}
+
+footer p {
+    margin-bottom: 2px;
 }
